archive/election-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: election-sync
  namespace: jegyrendszer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: election-sync
  template:
    metadata:
      labels:
        app: election-sync
    spec:
      serviceAccountName: election-svca
      imagePullSecrets:
      - name: regcred
      containers:
      - name: election-sync
        image: europe-west3-docker.pkg.dev/agora-jegyrendszer/jegyrendszer/election-sync:1.20.1 # {"$imagepolicy": "flux-system:election-flux"}
        resources:
          limits:
            memory: "2Gi"
