archive/ct-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tunnel-web-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    # traefik.ingress.kubernetes.io/router.middlewares: kube-system-ipwhitelist-middleware@kubernetescrd
    # traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-middleware@kubernetescrd
  namespace: default
spec:
  rules:
    - host: jegy.bnbdevelopment.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-server-svc
                port:
                  number: 8080
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: web-admin-svc
                port:
                  number: 8080
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: handle-server-service
                port:
                  number: 3001
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: handle-server-service
                port:
                  number: 3001
